--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{di
 //pages
 @import "modules/profile";
 @import "modules/post";
+@import "modules/users";
 
 //modular
 @import "modules/forms";
