--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,16 +1,19 @@
-    <%= form_for @user, :html => {:autocomplete => "off"} do |f| %>
-        <div class="user-form">
-            <%= f.fields_for :location do |l| %>
-                <div class="input"><%= l.text_field :city, :placeholder => 'City' %></div>
-                <div class="input"><%= l.text_field :state, :placeholder => 'State' %></div>
-            <% end %>
-            <div class="input"><%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %></div>
-            <div class="input"><%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %></div>
-            <!-- <div><%= f.text_area :about, :placeholder => "About Me" %></div> -->
-            <div><%= f.label :image_path, 'Update Profile Image'%></div>
-            <div><%= f.file_field :image_path %></div>
-        </div>
-        <%= f.submit "Update profile" %>
-    <% end %>
+<%= form_for @user, :html => {:autocomplete => "off"} do |f| %>
+    <div class="user-form">
+        <%= f.fields_for :location do |l| %>
+            <div class="input"><%= l.text_field :city, :placeholder => 'City' %></div>
+            <div class="input"><%= l.text_field :state, :placeholder => 'State' %></div>
+        <% end %>
+        <div class="input"><%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %></div>
+        <div class="input"><%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %></div>
+        <!-- <div><%= f.text_area :about, :placeholder => "About Me" %></div> -->
+        <div><%= f.label :image_path, 'Update Profile Image'%></div>
+        <div><%= f.file_field :image_path %></div>
+    </div>
+    <%= f.submit "Update profile" %>
+<% end %>
+
+<h3>Jobs</h3>
+<%= render :partial => 'jobs/form', :collection => @user.jobs %>
 
 
