--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,3 +1,3 @@
-<%= form_for job do |f| %>
+<%= form_for job, :remote => true do |f| %>
     <%= f.text_field :title, :placeholder => 'Job Title' %>
 <% end %>
