begin users search

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{di
 
 //layout
 @import "modules/layout";
+@import "modules/search";
 
 //pages
 @import "modules/profile";
