--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,9 @@
 <div class="fixed-hd">
     
+    <div class="search-select">
+        <%= render :partial => "users/search", :collection => nil, :as => :user %> 
+    </div>
+
     <div class="top-nav">
         <ul>
             <li><a class="icon icon-house"></a></li>
@@ -9,10 +13,14 @@
     </div>
     
     <div class="bottom-nav">
-        <div class="logo">The<b>Biz</b></div>
-        <span class="icon icon-search"></span>
-        <input placeholder="Find..." type="text" />
         
+        <div class="logo">The<b>Biz</b></div>
+        
+        <%= form_tag '/', :id => 'search-form' do %>
+            <span class="icon icon-search"></span>
+            <%= text_field_tag :term, params[:term] %>
+        <% end %>
+
         <div class="right-buttons">
 
             <div class="user-info">
