--- a/app/assets/stylesheets/modules/_search.scss
+++ b/app/assets/stylesheets/modules/_search.scss
@@ -45,8 +45,13 @@
             }
         }
         
-        &:hover {
+        &.active {
             background: $lightblue;
+
+        }
+        
+        &:hover,
+        &.active {
             
             .title,
             .name,
