--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,11 +15,9 @@
     <div class="bottom-nav">
         
         <div class="logo">The<b>Biz</b></div>
-        
-        <%= form_tag '/', :id => 'search-form' do %>
-            <span class="icon icon-search"></span>
-            <%= text_field_tag :term, params[:term] %>
-        <% end %>
+
+        <span class="icon icon-search"></span>
+        <%= text_field_tag 'term', nil, :placeholder => 'Find...', :autocomplete => 'off'  %>
 
         <div class="right-buttons">
 
