--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
         	<a href="<%= user_path(post.user) %>">
             	<div class="name"><%= post.user.full_name %></div>
             </a>
-            <div class="title">title</div>
+            <div class="title"><%= post.user.subtitle %></div>
         </div>
         
         <p><%= post.content %></p>
