--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -7,6 +7,7 @@
         height: 100px;
         @include box();
         padding-left: 140px;
+        margin-bottom: 20px;
         
         &.even {
             margin-right: 20px;
