adds nearby location and people aggregation

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -49,7 +49,7 @@
     <ul class="nav">
         <%= nav_link 'Conversation', posts_path, 'list' %>
         <%= nav_link 'People', users_path, 'users' %>
-        <%= nav_link 'Locations', '/', 'location' %>
+        <%= nav_link 'Locations', nearby_path, 'location' %>
     </ul>
     
 </div>
