--- a/app/views/locations/nearby.html.erb
+++ b/app/views/locations/nearby.html.erb
@@ -3,6 +3,7 @@
     <% if location.users.count > 0 %>
     <div class="user-list">
         <h4><%= location.address %></h4>
+        <div class="distance"><%= @location.distance_to(location).round %> miles away</div>
         <%= render :partial => 'users/user', :collection => location.users %>
     </div>
     <% end %>
