--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,11 @@
     <div class="user-info">
             
         <a class="pill following">
-            <span><% @user.followed_users.count %></span> following
+            <span><%= @user.followed_count %></span> following
         </a>
         
         <a class="pill followers">
-            <span><%= @user.followers.count %></span> followers
+            <span><%= @user.followers_count %></span> followers
         </a>
         
         <a class="pill location">
