--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -1,5 +1,5 @@
 <a href="<%= user_path user %>" class="item">
-    <img src="http://www.placekitten.com/30/30" />
+    <%= image_tag(user.image_path.url(:thumb)) %>
     <div class="name"><%= user.first_name %> <%= user.last_name %></div>
     <div class="title">title</div>
     <div class="location"><%= user.location.state %>
