adds remote post form, and makes some minor edits

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
     
         <%= render :partial => 'posts/form' %>
     
-        <%= render :partial => 'posts/post', :collection => @user.posts %>
+        <%= render :partial => 'posts/post', :collection => @user.posts.recent %>
     
     </div>
     
