add expanding js to new post comments

--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,2 +1,3 @@
 $(".new_post").after('<%= escape_javascript(render :partial => 'post', locals: {:post => @post}) %>');
 $("#new_post textarea").val('');
+$(".post").first().find(".expanding").expandingTextarea();
