--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,11 +37,11 @@
     
     <div class="profile-sub-nav">
         <ul>
-            <li data-show="profile-user-posts" class="icon-list active"> Posts</li>
-            <li data-show="profile-user-bio" class="icon-info"> About</li>
-            <li data-show="profile-user-portfolio" class="icon-book"> Portfolio</li>
-            <li data-show="profile-user-contact" class="icon-mail"> Contact</li>
-            <li data-show="profile-user-following" class="icon-chat"> Following</li>
+            <li data-show="profile-user-posts" class="active"><span class="icon icon-list active"></span> Posts</li>
+            <li data-show="profile-user-bio"><span class="icon icon-info"></span> About</li>
+            <li data-show="profile-user-portfolio"><span class="icon icon-book"></span> Portfolio</li>
+            <li data-show="profile-user-contact"><span class="icon icon-mail"></span> Contact</li>
+            <li data-show="profile-user-following"><span class="icon icon-chat"></span> Following</li>
         </ul>    
     </div> 
     
