--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{di
 @import "modules/profile";
 @import "modules/post";
 @import "modules/users";
+@import "modules/locations";
 
 //modular
 @import "modules/forms";
