--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -105,19 +105,84 @@ textarea, .textareaClone {
 }
 
 .new-post {
-    @include box;
-    padding: 0;
+    position: relative;
+    
+    textarea, .textareaClone {
+        min-height: 58px;
+    }
+    
+    img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 60px;
+        width: 60px;
+        border-radius: 2px;
+        box-shadow: 1px 1px 2px $grey;
+    }
+    
+    h3 {
+        padding: 10px 20px 10px 40px;
+        background: $darkbackground;
+        color: #fff;
+        border-radius: 2px 2px 0 0;
+        position: relative;
+        font-size: 12px;
+        font-weight: normal;
+        
+        .icon {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            width: 16px;
+            height: 16px;
+            font-size: 16px;
+            color: #fff;
+        }
+    }
+    
+    .input-wrap {
+        @include box;
+        padding: 0;
+        min-height: 60px;
+        position: relative;
+        margin: 0 0 20px 80px;
+        width: 690px;
+        
+        .pointer {
+            @include css-triangle('left', 6px, #fff);
+            position: absolute;
+            left: -12px;
+            top: 14px;
+            z-index: 3;
+        }
+        
+        .buttons {
+            padding: 5px;
+            border-top: 1px solid $lightgrey;
+            position: relative;
+            height: 31px;
+            
+            .btn {
+                font-size: 12px;
+                position: absolute;
+                right: 5px;
+                top: 5px;
+            }
+        }
+    }
     
     textarea {
         width: 100%;
         background: #fff;
         padding: 10px;
+        font-size: 14px;
     }
 }
 
 .comment-form {
     position: relative;
-    border-top: 1px solid $grey;
+    border-top: 2px solid $grey;
     
     img {
         border-radius: 3px;
@@ -146,9 +211,6 @@ textarea, .textareaClone {
             top: -48px;
             right: 20px;
             font-size: 12px;
-            background: $green;
-            border-color: $darkgreen;
-            color: #fff;
             padding: 4px 10px;
         }
     }
