--- a/app/assets/stylesheets/modules/_mixins.scss
+++ b/app/assets/stylesheets/modules/_mixins.scss
@@ -1,5 +1,5 @@
 /* colors */
-$background: #eee;
+$background: #e5e5e5;
 $darkbackground: #2a2e33;
 
 $blue      : #009bff;
@@ -34,4 +34,23 @@ $darkyellow : #ffd200;
     border-radius: 2px;
     background: #fff;
     padding: 10px;
+}
+@mixin css-triangle($direction: "down", $size: 20px, $color: #000) {
+    width: 0;
+    height: 0;
+    border-left: $size solid #{setTriangleColor($direction, "left", $color)};
+    border-right: $size solid #{setTriangleColor($direction, "right", $color)};
+    border-bottom: $size solid #{setTriangleColor($direction, "bottom", $color)};
+    border-top: $size solid #{setTriangleColor($direction, "top", $color)};
+}
+
+@function setTriangleColor($direction, $side, $color) {
+    @if $direction == "left" and $side == "right"
+    or  $direction == "right" and $side == "left"
+    or $direction == "down" and $side == "top"
+    or $direction == "up" and $side == "bottom" {
+        @return $color
+    } @else {
+        @return "transparent";
+    }
 }
