--- a/app/views/locations/nearby.html.erb
+++ b/app/views/locations/nearby.html.erb
@@ -1,10 +1,27 @@
-<h3>People within <%= @proximity %> miles from <%= @location.address %></h3>
-<% @locations.each do |location| %>
-    <% if location.users.count > 0 %>
-    <div class="user-list">
-        <h4><%= location.address %></h4>
-        <div class="distance"><%= @location.distance_to(location).round %> miles away</div>
-        <%= render :partial => 'users/user', :collection => location.users %>
+<div class="locations">
+    
+    <div class="location-header">
+        <span class="icon icon-location"></span>
+        <div class="location-name"><%= @location.address %></div>
+        
+        <a class="icon icon-pencil change-location"></a>
     </div>
+    
+<% #@proximity %>
+    
+    <% @locations.each do |location| %>
+    
+        <% if location.users.count > 0 %>
+        
+            <div class="user-list user-list-by-location">
+                <div class="where"><%= location.address %> &nbsp; <b><%= @location.distance_to(location).round %> miles away</b></div>
+                
+                <%= render :partial => 'users/user', :collection => location.users %>
+                <div class="clb"></div>
+            </div>
+        
+        <% end %>
+        
     <% end %>
-<% end %>
+    
+</div>
