--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,13 +7,28 @@
         
             <div class="input">
                 <%= f.label :email %>
-                <%= f.email_field :email, :autofocus => true %>
+                <%= f.email_field :email, :autofocus => true, :placeholder => 'noobie@thebiz.com' %>
             </div>
           
             <div class="input">
                 <%= f.label :birthday %>
                 <%= f.date_select :birthday, :start_year => 1900 %>
             </div>
+            
+            <% resource.build_location %>
+            <% resource.location.city = request.location.city unless request.location.city.empty? %>
+            <% resource.location.state = request.location.state unless request.location.state.empty? %>
+            
+            <%= f.fields_for :location do |l| %>
+                <div class="input">
+                    <%= f.label :city %>
+                    <%= l.text_field :city, :placeholder => 'City' %>
+                </div>
+                <div class="input">
+                    <%= f.label :state %>
+                    <%= l.text_field :state, :placeholder => 'State' %>
+                </div>
+            <% end %>
         
             <div class="input">
                 <%= f.label :password %>
